gcloud version upload

--- a/.gcloudignore
+++ b/.gcloudignore
@@ -6,6 +6,9 @@
 # For more information, run:
 #   $ gcloud topic gcloudignore
 #
+
+#!include:.gitignore
+
 .gcloudignore
 # If you would like to upload your .git directory, .gitignore file or files
 # from your .gitignore file, remove the corresponding line
@@ -15,5 +18,9 @@
 
 # Python pycache:
 __pycache__/
+
 # Ignored by the build system
 /setup.cfg
+
+# Heroku files
+/heroku_files
